Edx-Courses/LFS158x-intro-to-kubernetes/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    run: nginx-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.22.1
      ports:
        - containerPort: 80
